--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="src/css/custom.css" />
     <title>Daisy RA</title>
   </head>
-  <body class="bg-light b-top">
+  <body class="bg-light">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-white bg-light">
         <button
@@ -32,7 +32,7 @@
         >
           <ul class="navbar-nav mr-3">
             <li class="nav-item">
-              <a class="nav-link" href="#">Om Daisy</a>
+              <a class="nav-link" href="/omdaisy.html">Om Daisy</a>
             </li>
           </ul>
         </div>
@@ -198,16 +198,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -301,16 +301,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -346,16 +346,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -439,16 +439,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -485,16 +485,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -563,16 +563,16 @@
                             class="btn btn-lg btn-primary search"
                           >
                             <svg
-                              height="22"
-                              viewBox="0 0 24 24"
-                              width="22"
-                              class="mr-1"
                               xmlns="http://www.w3.org/2000/svg"
+                              width="20"
+                              height="20"
+                              viewBox="0 0 16 16"
+                              class="mr-2"
                             >
                               <path
-                                fill="#fff"
-                                class="heroicon-ui"
-                                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+                                fill-rule="evenodd"
+                                fill="#ffffff"
+                                d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
                               />
                             </svg>
                             <span>Søg</span>
@@ -610,7 +610,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
+            <h5 class="modal-title font-weight-bold" id="exampleModalLabel">
               Opret Arkivskaber
             </h5>
             <button
@@ -646,7 +646,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="nyarbopgaveModalLabel">
+            <h5 class="modal-title font-weight-bold" id="nyarbopgaveModalLabel">
               Ny arbejdsopgave
             </h5>
             <button
@@ -676,12 +676,7 @@
                 >Opgavenavn</label
               >
               <div class="col-sm-8">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  placeholder="Opgavenavn"
-                />
+                <input type="text" class="form-control" id="name" />
               </div>
             </div>
 
