--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -10,7 +10,7 @@
   <title>Daisy RA</title>
 </head>
 
-<body class="bg-light b-top">
+<body class="bg-light">
   <div class="container-fluid">
     <div class="col-sm-10 col-centered">
       <nav class="navbar navbar-expand-lg navbar-white">
