--- a/search/search-arbejdsopgave.html
+++ b/search/search-arbejdsopgave.html
@@ -12,7 +12,7 @@
     <title>Daisy RA</title>
   </head>
 
-  <body class="bg-light b-top">
+  <body class="bg-light">
     <div class="container-fluid">
       <div class="col-sm-10 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
@@ -104,7 +104,7 @@
           <div class="card special pt-2 pl-3 pr-3 pb-3">
             <div class="card-body">
               <!-- arbejdsopgave start -->
-              <form action="search-arbejdsopgave.html">
+              <form>
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-3">
@@ -133,7 +133,7 @@
                         id="ansvarlig"
                       />
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-3">
                       <div class="form-group mb-0">
                         <label for="status">Status</label>
                         <select class="form-control bg-light" id="status">
@@ -143,14 +143,36 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-sm-1 mt-4">
-                      <button type="submit" class="btn btn-primary">
-                        Søg
-                      </button>
-                    </div>
                   </div>
                 </div>
               </form>
+              <div class="row pl-3">
+                <div class="col-sm-4 mt-3 d-flex align-items-center">
+                  <button class="btn btn-primary d-flex align-items-center">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      viewBox="0 0 16 16"
+                      class="mr-2 mt-1"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        fill="#ffffff"
+                        d="M15.7 13.3l-3.81-3.83A5.93 5.93 0 0 0 13 6c0-3.31-2.69-6-6-6S1 2.69 1 6s2.69 6 6 6c1.3 0 2.48-.41 3.47-1.11l3.83 3.81c.19.2.45.3.7.3.25 0 .52-.09.7-.3a.996.996 0 0 0 0-1.41v.01zM7 10.7c-2.59 0-4.7-2.11-4.7-4.7 0-2.59 2.11-4.7 4.7-4.7 2.59 0 4.7 2.11 4.7 4.7 0 2.59-2.11 4.7-4.7 4.7z"
+                      />
+                    </svg>
+                    <span>Søg</span>
+                  </button>
+                  <button
+                    class="ml-3 btn btn-outline-primary"
+                    data-toggle="modal"
+                    data-target="#nyarbopgave"
+                  >
+                    <span>+ Ny arbejdsopgave</span>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -231,6 +253,121 @@
                 </table>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal ny arbejdsopgave -->
+    <div
+      class="modal fade"
+      id="nyarbopgave"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="nyarbopgaveModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title font-weight-bold" id="nyarbopgaveModalLabel">
+              Ny arbejdsopgave
+            </h5>
+            <button
+              type="button"
+              class="btn close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group row">
+              <label for="name" class="col-sm-4 col-form-label"
+                >Opgavenavn</label
+              >
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="name" />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="ansvarlig"
+                >Ansvarlig</label
+              >
+              <div class="col-sm-8">
+                <select class="form-control" id="kontaktperson">
+                  <option>LSKSK</option>
+                  <option>LAK</option>
+                  <option>LAKAJK</option>
+                  <option>PGA</option>
+                  <option>UDAL</option>
+                  <option>BOXODO</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type">Type</label>
+              <div class="col-sm-8">
+                <select class="form-control" id="type">
+                  <option>Intern</option>
+                  <option>Ekstern</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label" for="type"
+                >Kontaktoplysninger</label
+              >
+              <div class="col-sm-8">
+                <textarea class="form-control" id="type" rows="5"> </textarea>
+                <small class="form-text text-muted"
+                  >Tilføj evt. Kontaktperson, email og telefonnr.</small
+                >
+              </div>
+            </div>
+            <div class="form-group row mb-0">
+              <div class="col-sm-12">
+                <div class="alert alert-info text-center mb-0" role="alert">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 16 16"
+                    class="mr-3 mb-1"
+                  >
+                    <path
+                      fill="#11545F"
+                      fill-rule="evenodd"
+                      d="M8.893 1.5c-.183-.31-.52-.5-.887-.5s-.703.19-.886.5L.138 13.499a.98.98 0 0 0 0 1.001c.193.31.53.501.886.501h13.964c.367 0 .704-.19.877-.5a1.03 1.03 0 0 0 .01-1.002L8.893 1.5zm.133 11.497H6.987v-2.003h2.039v2.003zm0-3.004H6.987V5.987h2.039v4.006z"
+                    />
+                  </svg>
+                  Eksemplarer kan tilføjes når opgaven er oprettet.
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-dismiss="modal"
+              onclick="window.location.href='/arbejdsopgave.html'"
+            >
+              Opret opgave
+            </button>
           </div>
         </div>
       </div>
