Added functionality and stickyness for header

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -81,9 +81,7 @@
                     <div
                       class="card-header d-flex align-items-center justify-content-between"
                     >
-                      <h5 class="mb-0">
-                        Min arbejdsopgave
-                      </h5>
+                      <h5 class="mb-0">Min arbejdsopgave</h5>
                       <div class="float-right readonly">
                         <button class="btn btn-primary readonly edit">
                           Rediger
@@ -289,7 +287,6 @@ Nørregade 56
                                   <button
                                     class="btn btn-success opentask"
                                     data-toggle="modal"
-                                    data-target="#opentask"
                                   >
                                     Gen-åben opgave
                                   </button>
