--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -343,7 +343,7 @@ Nørregade 56
                           <table
                             id="eksemplar-tabel"
                             width="100%"
-                            class="table table-hover table-striped mb-0"
+                            class="table table-hover sorting table-striped mb-0"
                           >
                             <thead>
                               <tr>
@@ -355,7 +355,10 @@ Nørregade 56
                                 <th scope="col">Eks. Type</th>
                                 <th scope="col">Eks. Navn</th>
                                 <th scope="col">Sort. felt.</th>
-                                <th scope="col"></th>
+                                <th
+                                  scope="col"
+                                  style="visibility: hidden;"
+                                ></th>
                               </tr>
                             </thead>
                             <tbody>
@@ -436,7 +439,7 @@ Nørregade 56
       aria-labelledby="tilfoejeksModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title font-weight-bold" id="tilfoejeksModalLabel">
@@ -477,19 +480,18 @@ Nørregade 56
               <table
                 id=""
                 width="100%"
-                class="table table-hover table-striped mb-0"
+                class="table sorting table-hover table-striped mb-0"
               >
                 <thead>
                   <tr>
-                    <th scope="col">
+                    <th scope="col" class="d-flex align-items-center">
                       <div
-                        class="form-check form-inline p-0 d-flex align-items-center mb-1"
+                        class="form-check form-inline p-0 d-flex align-items-center"
                       >
                         <input
                           class="form-check-input"
                           type="checkbox"
                           value=""
-                          class="clickable-checkbox-all"
                           id="defaultCheck1"
                         />
                       </div>
