--- a/search/search-arbejdsopgave.html
+++ b/search/search-arbejdsopgave.html
@@ -190,7 +190,7 @@
                 <table
                   id="search"
                   width="100%"
-                  class="table table-hover table-striped"
+                  class="table table-hover sorting table-striped"
                 >
                   <thead>
                     <tr>
