--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -170,7 +170,7 @@
                 <table
                   id="search"
                   width="100%"
-                  class="table table-hover table-striped"
+                  class="table sorting table-hover table-striped"
                 >
                   <thead>
                     <tr>
