--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -181,7 +181,7 @@
                 <table
                   id="search"
                   width="100%"
-                  class="table table-hover table-striped"
+                  class="table sorting table-hover table-striped"
                 >
                   <thead>
                     <tr>
