Several changes to layout

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -66,14 +66,13 @@
               <a href="/search/search-arbejdsopgave.html" class="d-flex mb-4"
                 >« Tilbage til søgning</a
               >
-              <span class="badge badge-primary">Arbejdsopgave</span>
-
-              <h1 class="font-weight-bold mt-4">
-                Min arbejdsopgave
-              </h1>
-              <h4 class="text-secondary mb-5">
+              <span class="badge badge-primary badge-pill mt-2 mb-4"
+                >Arbejdsopgave</span
+              >
+              <h1 class="font-weight-bold">Min arbejdsopgave</h1>
+              <h3 class="text-secondary mb-5">
                 Åbnet: 10. juni 2002 &nbsp;&bull;&nbsp; Lukket: 15. juni 2002
-              </h4>
+              </h3>
 
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
@@ -318,24 +317,25 @@ Nørregade 56
                           </div>
                         </h4>
                         <button
-                          class="btn btn-primary mb-3 mr-3 d-flex align-items-center readonly"
+                          class="btn btn-outline-primary mb-3 mr-3 readonly"
                           data-toggle="modal"
                           data-target="#tilfoejeks"
                         >
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="12"
-                            height="16"
-                            viewBox="0 0 12 16"
-                            class="mr-2"
-                          >
-                            <path
-                              fill="#fff"
-                              fill-rule="evenodd"
-                              d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                            />
-                          </svg>
-                          <span>Tilføj</span>
+                          <span class="d-flex align-items-center">
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="12"
+                              height="16"
+                              viewBox="0 0 12 16"
+                              class="mr-2"
+                            >
+                              <path
+                                fill-rule="evenodd"
+                                d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                              />
+                            </svg>
+                            <span>Tilføj</span>
+                          </span>
                         </button>
                       </div>
                       <div class="card bg-white ml-3 mr-3">
@@ -612,11 +612,7 @@ Nørregade 56
                 viewBox="0 0 12 16"
                 class="mr-2"
               >
-                <path
-                  fill="#fff"
-                  fill-rule="evenodd"
-                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                />
+                <path fill-rule="evenodd" d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z" />
               </svg>
               <span>Tilføj</span>
             </button>
