--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -306,7 +306,7 @@
                               </div>
                             </h4>
                             <button
-                              class="btn btn-primary readonly"
+                              class="btn btn-outline-primary readonly"
                               data-toggle="modal"
                               data-target="#tilfoejnavne"
                             >
@@ -319,7 +319,6 @@
                                   class="mr-2"
                                 >
                                   <path
-                                    fill="#fff"
                                     fill-rule="evenodd"
                                     d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                                   />
@@ -527,27 +526,30 @@
                                   <span class="ml-3">Interne noter</span>
                                 </div>
                               </h4>
-                              <p class="ml-3 mr-3 readonly">
-                                Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry. Lorem Ipsum has been
-                                the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley
-                                of type and scrambled it to make a type specimen
-                                book. It has survived not only five centuries,
-                                but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was
-                                popularised in the 1960s with the release of
-                                Letraset sheets containing Lorem Ipsum passages,
-                                and more recently with desktop publishing
-                                software like Aldus PageMaker including versions
-                                of Lorem Ipsum.
-                              </p>
-                              <div class="form-group write mb-0 ml-0 mr-0">
-                                <textarea
-                                  class="form-control"
-                                  id="exampleFormControlTextarea1"
-                                  rows="10"
-                                >
+                              <div class="card ml-3 mr-3">
+                                <div class="card-body">
+                                  <p class="ml-3 mr-3 readonly">
+                                    Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy
+                                    text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled
+                                    it to make a type specimen book. It has
+                                    survived not only five centuries, but also
+                                    the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was
+                                    popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum
+                                    passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker
+                                    including versions of Lorem Ipsum.
+                                  </p>
+                                  <div class="form-group write mb-0 ml-0 mr-0">
+                                    <textarea
+                                      class="form-control"
+                                      id="exampleFormControlTextarea1"
+                                      rows="10"
+                                    >
 Lorem Ipsum is simply dummy text of the printing
 and typesetting industry. Lorem Ipsum has been
 the industry's standard dummy text ever since
@@ -561,7 +563,10 @@ Letraset sheets containing Lorem Ipsum passages,
 and more recently with desktop publishing
 software like Aldus PageMaker including versions
 of Lorem Ipsum.
-                                </textarea>
+                                </textarea
+                                    >
+                                  </div>
+                                </div>
                               </div>
                             </div>
                             <div class="col-sm-6">
@@ -582,27 +587,30 @@ of Lorem Ipsum.
                                   <span class="ml-3">Publikums noter</span>
                                 </div>
                               </h4>
-                              <p class="ml-3 mr-3 readonly">
-                                Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry. Lorem Ipsum has been
-                                the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley
-                                of type and scrambled it to make a type specimen
-                                book. It has survived not only five centuries,
-                                but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was
-                                popularised in the 1960s with the release of
-                                Letraset sheets containing Lorem Ipsum passages,
-                                and more recently with desktop publishing
-                                software like Aldus PageMaker including versions
-                                of Lorem Ipsum.
-                              </p>
-                              <div class="form-group write mb-0 ml-0 mr-0">
-                                <textarea
-                                  class="form-control"
-                                  id="exampleFormControlTextarea1"
-                                  rows="10"
-                                >
+                              <div class="card ml-3 mr-3">
+                                <div class="card-body">
+                                  <p class="ml-3 mr-3 readonly">
+                                    Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy
+                                    text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled
+                                    it to make a type specimen book. It has
+                                    survived not only five centuries, but also
+                                    the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was
+                                    popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum
+                                    passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker
+                                    including versions of Lorem Ipsum.
+                                  </p>
+                                  <div class="form-group write mb-0 ml-0 mr-0">
+                                    <textarea
+                                      class="form-control"
+                                      id="exampleFormControlTextarea1"
+                                      rows="10"
+                                    >
 Lorem Ipsum is simply dummy text of the printing
 and typesetting industry. Lorem Ipsum has been
 the industry's standard dummy text ever since
@@ -616,7 +624,10 @@ Letraset sheets containing Lorem Ipsum passages,
 and more recently with desktop publishing
 software like Aldus PageMaker including versions
 of Lorem Ipsum.
-                                </textarea>
+                                </textarea
+                                    >
+                                  </div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -1306,7 +1317,7 @@ of Lorem Ipsum.
                               </table>
                             </div>
                             <button
-                              class="btn btn-primary btn-sm d-flex align-items-center mt-3 addrow-1"
+                              class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 addrow-1"
                             >
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1316,7 +1327,6 @@ of Lorem Ipsum.
                                 class="mr-2"
                               >
                                 <path
-                                  fill="#fff"
                                   fill-rule="evenodd"
                                   d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                                 />
@@ -1429,7 +1439,7 @@ of Lorem Ipsum.
                               </table>
                             </div>
                             <button
-                              class="btn btn-primary btn-sm d-flex align-items-center mt-3 addrow-2"
+                              class="btn btn-outline-primary btn-sm d-flex align-items-center mt-3 addrow-2"
                             >
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -1439,7 +1449,6 @@ of Lorem Ipsum.
                                 class="mr-2"
                               >
                                 <path
-                                  fill="#fff"
                                   fill-rule="evenodd"
                                   d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                                 />
